# mandelbrot_bmp_generator

./: CMakeLists.txt  example.mb  example_fast.mb  example_hirez.mb  readme.md
include/: bmp.h  cmake_config.h.in  cmdline.h  cpp.h  interactive.h  mandelbrot.h
src/: bmp.c  cmdline.c  cpp.cpp  interactive.c  main.c  mandelbrot.c
